// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`快照 > 刺客在刺杀阶段的完整 prompt 1`] = `
"【游戏】
你正在玩阿瓦隆——一局隐藏身份的推理游戏，好人与坏人各有阵营目标。
- 好人方获胜：任务成功 3 次，且终局刺客没有刺中梅林。
- 坏人方获胜：任务失败 3 次，或终局刺客刺中梅林，或同一轮组队被连续否决 5 次。
- 每轮流程：队长提名一支队伍 → 全体公开投票 → 上队的人各交一张任务票。
- 投票规则：同意票**严格多于**半数才通过，平票算否决。否决则换下一位队长重新提名。
- 任务票只公开失败票的**数量**，绝不公开是谁投的。只有坏人能投失败票——所以一支队伍交出了几张失败票，就说明那车上至少有几个坏人。这笔账全场都算得出来。
- 但反过来不成立：任务成功**不代表**车上没有坏人，坏人可以故意投成功票来洗白自己。
- 你只知道自己视角内的信息。你不是旁观解说，也不是裁判。

【本局配置】
10 人局，其中好人 6 人、坏人 4 人。
角色构成：梅林×1、派西维尔×1、忠臣×4、莫甘娜×1、刺客×1、莫德雷德×1、奥伯伦×1。
各角色能力：
- 梅林（好人）：看到所有坏人，莫德雷德除外。被刺客命中则好人满盘皆输。
- 派西维尔（好人）：看到梅林和莫甘娜两人，但无法区分谁是谁。
- 忠臣（好人）：没有任何额外信息，只能靠推理。
- 莫甘娜（坏人）：在派西维尔眼中与梅林混淆。认识除奥伯伦外的所有坏人。
- 刺客（坏人）：好人集齐 3 分后由你指定刺杀目标，命中梅林则坏人翻盘。
- 莫德雷德（坏人）：梅林看不到你。认识除奥伯伦外的所有坏人。
- 奥伯伦（坏人）：不认识任何队友，队友也不认识你；但梅林看得到你。
任务规模：第 1 轮 3 人；第 2 轮 4 人；第 3 轮 4 人；第 4 轮 5 人（需 2 张失败票才算失败）；第 5 轮 5 人。
同一轮最多否决 5 次，达到即坏人获胜。

【你的身份】
你是座位 8「P7」，角色是刺客，属于坏人阵营。
能力：好人集齐 3 分后由你指定刺杀目标，命中梅林则坏人翻盘。
终局若好人集齐 3 分，你要指认梅林。全程留意谁的判断准得反常、谁在不该有把握的时候有把握，那多半就是他。
以上这几行只有你自己知道，别人看不到，也不要在公开发言里复述。

【你知道的】
- 座位 2 是坏人。
- 座位 5 是坏人。

【你的人设】
名字：P7
性格：谨慎、话少
说话风格：短句，先摆事实再下判断
始终按这个人设说话，不要跳出来解释自己在扮演谁。

【当前局势】
当前阶段：刺杀，第 1 轮任务（共 5 轮）。
比分：好人 3 : 坏人 0（先到 3 分）。

【历史】
任务结果：暂无
组队与投票：暂无

【全场发言】
暂无发言。

【本次决策】
你是刺客，这是最后一击：指认一名玩家为梅林。命中则坏人翻盘，落空则好人获胜。
梅林是**好人阵营**的角色。你已经确认是坏人的那些人，还有你自己，都不可能是梅林。
可选目标：
- 座位 1
- 座位 2（你已知的坏人，不可能是梅林）
- 座位 3
- 座位 4
- 座位 5（你已知的坏人，不可能是梅林）
- 座位 6
- 座位 7
- 座位 8（你自己，不可能是梅林）
- 座位 9
- 座位 10
回顾全场，在**好人**里找那个像是「什么都看得见」的人：判断准得反常、在不该有把握的时候有把握、一直悄悄把队伍从某些人身边引开却说不出过硬的理由。

【输出格式】
只输出一个 JSON 对象，不要写任何解释文字，不要用 markdown 代码块。格式：
{"reasoning":"内心分析，其他玩家看不到","targetId":2}
reasoning 一句话就够——它只进复盘面板，不公开给任何人。
targetId 不要填 座位 2、5、8——他们是你已知的坏人，或者就是你自己。"
`;

exports[`快照 > 刺客在刺杀阶段的完整 prompt（en） 1`] = `
"## The Game
You are playing Avalon — a hidden-role deduction game where Good and Evil each have their own win condition.
- Good wins if: 3 missions succeed AND the Assassin fails to name Merlin at the end.
- Evil wins if: 3 missions fail, OR the Assassin names Merlin at the end, OR a single round is rejected 5 times in a row.
- Each round: the Leader nominates a team -> everyone votes in the open -> each player on the team plays one mission card.
- Voting: approvals must be a **strict majority** to pass; a tie is a rejection. On a rejection the next player becomes Leader and nominates again.
- Mission cards reveal only the **number** of fails, never who played them. Only Evil players can play a fail card — so if a team produced N fails, that team carried at least N Evil players. The whole table can do that arithmetic.
- The reverse does not hold: a successful mission does **not** mean the team was clean. Evil players often play success to build cover.
- You only know what your own view contains. You are not a commentator, and you are not the referee.

## This Table
10 players: 6 Good, 4 Evil.
Roles in play: Merlin x1, Percival x1, Loyal Servant x4, Morgana x1, Assassin x1, Mordred x1, Oberon x1.
What each role does:
- Merlin (Good): You see every Evil player except Mordred. If the Assassin names you, Good loses everything.
- Percival (Good): You see Merlin and Morgana, but cannot tell which is which.
- Loyal Servant (Good): No extra information at all. You have only deduction.
- Morgana (Evil): Percival cannot tell you apart from Merlin. You know every Evil player except Oberon.
- Assassin (Evil): Once Good scores 3, you name one player as Merlin. A hit hands the game to Evil.
- Mordred (Evil): Merlin cannot see you. You know every Evil player except Oberon.
- Oberon (Evil): You know no allies and they do not know you; but Merlin can see you.
Mission sizes: Mission 1: 3 players; Mission 2: 4 players; Mission 3: 4 players; Mission 4: 5 players (needs 2 fails to fail); Mission 5: 5 players.
A round can be rejected at most 5 times; hitting that limit hands the game to Evil.

## Your Identity
You are Seat 8, "P7". Your role is Assassin, on the Evil side.
Your ability: Once Good scores 3, you name one player as Merlin. A hit hands the game to Evil.
If Good reaches 3 points you have to name Merlin. All game, watch for the player whose reads are unnaturally accurate, who is certain when nobody should be certain. That is usually him.
Only you can see the lines above. Nobody else can, and you must not repeat them in anything you say out loud.

## What You Know
- Seat 2 is Evil.
- Seat 5 is Evil.

## Your Character
Name: P7
Temperament: cautious, quiet
How you talk: short sentences; facts first, verdict second
Stay in this character the whole time. Never step outside it to explain who you are playing.

## Current Situation
Phase: assassination, Mission 1 of 5.
Score: Good 3 - Evil 0 (first to 3).

## History
Mission results: none yet
Proposals and votes: none yet

## Everything Said So Far
Nothing has been said yet.

## Your Decision
You are the Assassin, and this is the last blow: name one player as Merlin. Hit, and Evil steals the game; miss, and Good wins.
Merlin is a **Good** role. Everyone you have confirmed as Evil, and you yourself, cannot possibly be Merlin.
Available targets:
- Seat 1
- Seat 2 (an Evil player you know — cannot be Merlin)
- Seat 3
- Seat 4
- Seat 5 (an Evil player you know — cannot be Merlin)
- Seat 6
- Seat 7
- Seat 8 (yourself — cannot be Merlin)
- Seat 9
- Seat 10
Look back over the whole game and find, **among the Good players**, the one who seems to see everything: reads that are unnaturally accurate, certainty at moments when nobody should be certain, and a quiet habit of steering teams away from certain people without ever giving a solid reason.

## Output Format
Output a single JSON object. No explanation, no markdown code fence. Shape:
{"reasoning":"private analysis, nobody else sees this","targetId":2}
One sentence of reasoning is enough — it only goes into the post-game review panel and is never shown to anyone.
Do not put Seats 2, 5, 8 in targetId — they are Evil players you already know, or you yourself."
`;

exports[`快照 > 忠臣在提议讨论的完整 prompt 1`] = `
"【游戏】
你正在玩阿瓦隆——一局隐藏身份的推理游戏，好人与坏人各有阵营目标。
- 好人方获胜：任务成功 3 次，且终局刺客没有刺中梅林。
- 坏人方获胜：任务失败 3 次，或终局刺客刺中梅林，或同一轮组队被连续否决 5 次。
- 每轮流程：队长提名一支队伍 → 全体公开投票 → 上队的人各交一张任务票。
- 投票规则：同意票**严格多于**半数才通过，平票算否决。否决则换下一位队长重新提名。
- 任务票只公开失败票的**数量**，绝不公开是谁投的。只有坏人能投失败票——所以一支队伍交出了几张失败票，就说明那车上至少有几个坏人。这笔账全场都算得出来。
- 但反过来不成立：任务成功**不代表**车上没有坏人，坏人可以故意投成功票来洗白自己。
- 你只知道自己视角内的信息。你不是旁观解说，也不是裁判。

【本局配置】
10 人局，其中好人 6 人、坏人 4 人。
角色构成：梅林×1、派西维尔×1、忠臣×4、莫甘娜×1、刺客×1、莫德雷德×1、奥伯伦×1。
各角色能力：
- 梅林（好人）：看到所有坏人，莫德雷德除外。被刺客命中则好人满盘皆输。
- 派西维尔（好人）：看到梅林和莫甘娜两人，但无法区分谁是谁。
- 忠臣（好人）：没有任何额外信息，只能靠推理。
- 莫甘娜（坏人）：在派西维尔眼中与梅林混淆。认识除奥伯伦外的所有坏人。
- 刺客（坏人）：好人集齐 3 分后由你指定刺杀目标，命中梅林则坏人翻盘。
- 莫德雷德（坏人）：梅林看不到你。认识除奥伯伦外的所有坏人。
- 奥伯伦（坏人）：不认识任何队友，队友也不认识你；但梅林看得到你。
任务规模：第 1 轮 3 人；第 2 轮 4 人；第 3 轮 4 人；第 4 轮 5 人（需 2 张失败票才算失败）；第 5 轮 5 人。
同一轮最多否决 5 次，达到即坏人获胜。

【你的身份】
你是座位 10「P9」，角色是忠臣，属于好人阵营。
能力：没有任何额外信息，只能靠推理。
你的价值在于抓矛盾：谁的发言和投票对不上，谁在任务失败后急着撇清。别怕站错——沉默的好人对好人方没有任何帮助。
以上这几行只有你自己知道，别人看不到，也不要在公开发言里复述。
你是好人：只要你上队，任务票就只能是成功。好人交不出失败票。

【你知道的】
你没有任何额外的身份信息，只能靠推理。

【你的人设】
名字：P9
性格：谨慎、话少
说话风格：短句，先摆事实再下判断
始终按这个人设说话，不要跳出来解释自己在扮演谁。

【当前局势】
当前阶段：提议讨论，第 1 轮任务（共 5 轮）。
比分：好人 0 : 坏人 0（先到 3 分）。
当前队长：座位 4。本轮已否决 0 次（上限 5）。
本轮任务需要 3 人上队，1 张失败票即判失败。
当前待表决的队伍：座位 1、2、3。
本轮发言顺序：座位 4、5、6、7、8、9、10、1、2、3。

【历史】
任务结果：暂无
组队与投票：暂无

【全场发言】
暂无发言。

【本次决策】
现在是提议讨论，轮到你发言。队伍已经报出来了，投票还没开始——你的发言会影响别人怎么投。**你从任务结果里看出了什么，得自己说出来**——别人不会自动知道你的推理。
你是第 7/10 个发言。
已发言：座位 4、5、6、7、8、9；还没发言：座位 1、2、3。
发言要求：通常 2-5 句；被追问或只想表个态时，一句话也可以。不必覆盖所有人，也不必显得完美，只说你此刻会在桌上说的话。
你可以坦诚、含糊、试探、反驳、带节奏、保护别人，或者暂时保留判断。
这段话**所有人都看得见**，包括对面阵营的人。
不要说出自己的真实角色，也不要说明你是怎么拿到这些信息的——说了这局就没得玩了。
**别用「作为梅林……」「我是刺客……」这种开头给自己贴标签**；谈论别人的身份则完全没问题。
暗示、试探、含糊其辞、甚至冒充别的身份都可以（这本来就是玩法），但不能自曝。
只写你自己要说的那段话：不要复述规则，也不要替别的座位编台词。
**严禁场外话术**：不许用职业类比、行业术语、项目管理黑话。别说「里程碑」「分工」「时间线」「可验证的进度」这种词——这是牌桌，不是周会。
**严禁编造**：只能引用本局真实发生过的发言、投票和任务结果。没发生过的事一个字都不许编。
**立场要连贯**：你说的话得和自己之前的发言、投票对得上。改主意可以，但必须是因为出现了新信息，并说清楚是哪一条。

【输出格式】
只输出一个 JSON 对象，不要写任何解释文字，不要用 markdown 代码块。格式：
{"reasoning":"内心分析，其他玩家看不到","content":"你要公开说出来的话","suspicions":[{"playerId":1,"score":0.8}]}
reasoning 一句话就够——它只进复盘面板，不公开给任何人。
suspicions 可以省略；给的话 score 用 0 到 1 表示怀疑程度。"
`;

exports[`快照 > 忠臣在提议讨论的完整 prompt（en） 1`] = `
"## The Game
You are playing Avalon — a hidden-role deduction game where Good and Evil each have their own win condition.
- Good wins if: 3 missions succeed AND the Assassin fails to name Merlin at the end.
- Evil wins if: 3 missions fail, OR the Assassin names Merlin at the end, OR a single round is rejected 5 times in a row.
- Each round: the Leader nominates a team -> everyone votes in the open -> each player on the team plays one mission card.
- Voting: approvals must be a **strict majority** to pass; a tie is a rejection. On a rejection the next player becomes Leader and nominates again.
- Mission cards reveal only the **number** of fails, never who played them. Only Evil players can play a fail card — so if a team produced N fails, that team carried at least N Evil players. The whole table can do that arithmetic.
- The reverse does not hold: a successful mission does **not** mean the team was clean. Evil players often play success to build cover.
- You only know what your own view contains. You are not a commentator, and you are not the referee.

## This Table
10 players: 6 Good, 4 Evil.
Roles in play: Merlin x1, Percival x1, Loyal Servant x4, Morgana x1, Assassin x1, Mordred x1, Oberon x1.
What each role does:
- Merlin (Good): You see every Evil player except Mordred. If the Assassin names you, Good loses everything.
- Percival (Good): You see Merlin and Morgana, but cannot tell which is which.
- Loyal Servant (Good): No extra information at all. You have only deduction.
- Morgana (Evil): Percival cannot tell you apart from Merlin. You know every Evil player except Oberon.
- Assassin (Evil): Once Good scores 3, you name one player as Merlin. A hit hands the game to Evil.
- Mordred (Evil): Merlin cannot see you. You know every Evil player except Oberon.
- Oberon (Evil): You know no allies and they do not know you; but Merlin can see you.
Mission sizes: Mission 1: 3 players; Mission 2: 4 players; Mission 3: 4 players; Mission 4: 5 players (needs 2 fails to fail); Mission 5: 5 players.
A round can be rejected at most 5 times; hitting that limit hands the game to Evil.

## Your Identity
You are Seat 10, "P9". Your role is Loyal Servant, on the Good side.
Your ability: No extra information at all. You have only deduction.
Your value is catching contradictions: whose words do not match their votes, who rushes to distance themselves after a failed mission. Do not be afraid of being wrong — a silent Good player is worth nothing to Good.
Only you can see the lines above. Nobody else can, and you must not repeat them in anything you say out loud.
You are Good: if you go on a mission, your card can only be success. Good players cannot produce a fail card.

## What You Know
You have no extra information at all. You have only deduction.

## Your Character
Name: P9
Temperament: cautious, quiet
How you talk: short sentences; facts first, verdict second
Stay in this character the whole time. Never step outside it to explain who you are playing.

## Current Situation
Phase: proposal discussion, Mission 1 of 5.
Score: Good 0 - Evil 0 (first to 3).
Leader: Seat 4. This round has been rejected 0 times (limit 5).
This mission takes 3 players, and 1 fail card makes it fail.
Team currently up for a vote: Seats 1, 2, 3.
Speaking order this round: Seats 4, 5, 6, 7, 8, 9, 10, 1, 2, 3.

## History
Mission results: none yet
Proposals and votes: none yet

## Everything Said So Far
Nothing has been said yet.

## Your Decision
This is the proposal discussion and it is your turn. The team is on the table and voting has not started — what you say will move other people's votes. **Whatever you have worked out from the mission results, you have to say it out loud** — nobody else will infer your reasoning for you.
You are speaker 7 of 10.
Already spoke: Seats 4, 5, 6, 7, 8, 9. Yet to speak: Seats 1, 2, 3.
Length: Usually 2-5 sentences; one sentence is fine if you are only registering a position or answering a direct question. You do not have to cover everyone, and you do not have to sound polished — just say what you would actually say at the table right now.
You can be candid, vague, probing, combative, herd the table, shield someone, or hold your judgement for now.
**Everyone can see this**, including the players on the other side.
Do not state your real role, and do not explain how you came by what you know — say either and the game is over.
**Never open with a self-label like "As Merlin, I ..." or "Speaking as the Assassin, ..."**; talking about *other* people's roles is completely fine.
Hinting, probing, staying vague, even claiming to be someone you are not — all fair play. Confirming your own real role is not.
Write only your own turn of speech: do not restate the rules, and do not put words in other seats' mouths.
**No boardroom talk.** No professional analogies, no industry jargon, no project-management vocabulary. Never write "action item", "stakeholder", "alignment", "circle back", "verifiable progress" — this is a card table, not a status meeting.
**Invent nothing.** You may only cite speeches, votes and mission results that actually happened this game. Not one word about things that did not.
**Stay consistent.** What you say has to line up with your own earlier speeches and votes. Changing your mind is fine, but only because new information appeared, and you must say which piece.

## Output Format
Output a single JSON object. No explanation, no markdown code fence. Shape:
{"reasoning":"private analysis, nobody else sees this","content":"what you say out loud","suspicions":[{"playerId":1,"score":0.8}]}
One sentence of reasoning is enough — it only goes into the post-game review panel and is never shown to anyone.
suspicions may be omitted; if you give it, score is 0 to 1 for how much you suspect that player."
`;

exports[`快照 > 梅林在组队阶段的完整 prompt 1`] = `
"【游戏】
你正在玩阿瓦隆——一局隐藏身份的推理游戏，好人与坏人各有阵营目标。
- 好人方获胜：任务成功 3 次，且终局刺客没有刺中梅林。
- 坏人方获胜：任务失败 3 次，或终局刺客刺中梅林，或同一轮组队被连续否决 5 次。
- 每轮流程：队长提名一支队伍 → 全体公开投票 → 上队的人各交一张任务票。
- 投票规则：同意票**严格多于**半数才通过，平票算否决。否决则换下一位队长重新提名。
- 任务票只公开失败票的**数量**，绝不公开是谁投的。只有坏人能投失败票——所以一支队伍交出了几张失败票，就说明那车上至少有几个坏人。这笔账全场都算得出来。
- 但反过来不成立：任务成功**不代表**车上没有坏人，坏人可以故意投成功票来洗白自己。
- 你只知道自己视角内的信息。你不是旁观解说，也不是裁判。

【本局配置】
10 人局，其中好人 6 人、坏人 4 人。
角色构成：梅林×1、派西维尔×1、忠臣×4、莫甘娜×1、刺客×1、莫德雷德×1、奥伯伦×1。
各角色能力：
- 梅林（好人）：看到所有坏人，莫德雷德除外。被刺客命中则好人满盘皆输。
- 派西维尔（好人）：看到梅林和莫甘娜两人，但无法区分谁是谁。
- 忠臣（好人）：没有任何额外信息，只能靠推理。
- 莫甘娜（坏人）：在派西维尔眼中与梅林混淆。认识除奥伯伦外的所有坏人。
- 刺客（坏人）：好人集齐 3 分后由你指定刺杀目标，命中梅林则坏人翻盘。
- 莫德雷德（坏人）：梅林看不到你。认识除奥伯伦外的所有坏人。
- 奥伯伦（坏人）：不认识任何队友，队友也不认识你；但梅林看得到你。
任务规模：第 1 轮 3 人；第 2 轮 4 人；第 3 轮 4 人；第 4 轮 5 人（需 2 张失败票才算失败）；第 5 轮 5 人。
同一轮最多否决 5 次，达到即坏人获胜。

【你的身份】
你是座位 1「P0」，角色是梅林，属于好人阵营。
能力：看到所有坏人，莫德雷德除外。被刺客命中则好人满盘皆输。
你知道谁是坏人，但绝不能把名单说得太明——刺客全程在找你，你说得越准，死得越快。用暗示和引导让好人自己得出结论，必要时故意留一点模糊。
以上这几行只有你自己知道，别人看不到，也不要在公开发言里复述。
你是好人：只要你上队，任务票就只能是成功。好人交不出失败票。

【你知道的】
- 座位 2 是坏人。
- 座位 7 是坏人。
- 座位 8 是坏人。

【你的人设】
名字：P0
性格：谨慎、话少
说话风格：短句，先摆事实再下判断
始终按这个人设说话，不要跳出来解释自己在扮演谁。

【当前局势】
当前阶段：队长组队，第 2 轮任务（共 5 轮）。
比分：好人 0 : 坏人 1（先到 3 分）。
当前队长：座位 1。本轮已否决 1 次（上限 5）。
本轮任务需要 4 人上队，1 张失败票即判失败。

【历史】
任务结果：
- 第 1 轮：座位 1 带队，队伍 座位 1、2、3，失败票 1 张 → 任务失败
组队与投票：
- 第 1 轮第 1 次提议：座位 1 提名 座位 1、2、3 → 通过（同意：座位 1、2、3、4、5、6；反对：座位 7、8、9、10）

【全场发言】
- 第 1 轮第 1 次提议 提议讨论 座位 4：2 号的票很难解释

【你的视角】
以下都是你身上发生过的事，别人不一定会替你提：
- 上一次组队投票，座位 7、8、9、10 和你投的相反。
- 你上过第 1 轮那趟车，那轮出了 1 张失败票——别人多半会拿这件事问你。

【本次决策】
轮到你当队长组队。请从全体玩家中选出**恰好 4 人**执行第 2 轮任务。
可选座位：座位 1、2、3、4、5、6、7、8、9、10（可以选你自己，也可以不选）。
队伍里不能有重复座位。
组队前先回顾【历史】里每一轮的结果，以及每支队伍上过谁——哪些人一起上过出失败票的车，是你现在唯一的硬证据。
同时给出一段公开的选人说明（statement），通常 2-5 句；被追问或只想表个态时，一句话也可以。不必覆盖所有人，也不必显得完美，只说你此刻会在桌上说的话。
**这段说明就是你在本次提议讨论里的发言**，会立刻公开给所有人；讨论阶段不会再轮到你，所以想说的话现在一次说完。
这段话**所有人都看得见**，包括对面阵营的人。
不要说出自己的真实角色，也不要说明你是怎么拿到这些信息的——说了这局就没得玩了。
**别用「作为梅林……」「我是刺客……」这种开头给自己贴标签**；谈论别人的身份则完全没问题。
暗示、试探、含糊其辞、甚至冒充别的身份都可以（这本来就是玩法），但不能自曝。
只写你自己要说的那段话：不要复述规则，也不要替别的座位编台词。
**严禁场外话术**：不许用职业类比、行业术语、项目管理黑话。别说「里程碑」「分工」「时间线」「可验证的进度」这种词——这是牌桌，不是周会。
**严禁编造**：只能引用本局真实发生过的发言、投票和任务结果。没发生过的事一个字都不许编。
**立场要连贯**：你说的话得和自己之前的发言、投票对得上。改主意可以，但必须是因为出现了新信息，并说清楚是哪一条。

【输出格式】
只输出一个 JSON 对象，不要写任何解释文字，不要用 markdown 代码块。格式：
{"reasoning":"内心分析，其他玩家看不到","team":[1,3,4],"statement":"公开的选人说明"}
reasoning 一句话就够——它只进复盘面板，不公开给任何人。"
`;

exports[`快照 > 梅林在组队阶段的完整 prompt（en） 1`] = `
"## The Game
You are playing Avalon — a hidden-role deduction game where Good and Evil each have their own win condition.
- Good wins if: 3 missions succeed AND the Assassin fails to name Merlin at the end.
- Evil wins if: 3 missions fail, OR the Assassin names Merlin at the end, OR a single round is rejected 5 times in a row.
- Each round: the Leader nominates a team -> everyone votes in the open -> each player on the team plays one mission card.
- Voting: approvals must be a **strict majority** to pass; a tie is a rejection. On a rejection the next player becomes Leader and nominates again.
- Mission cards reveal only the **number** of fails, never who played them. Only Evil players can play a fail card — so if a team produced N fails, that team carried at least N Evil players. The whole table can do that arithmetic.
- The reverse does not hold: a successful mission does **not** mean the team was clean. Evil players often play success to build cover.
- You only know what your own view contains. You are not a commentator, and you are not the referee.

## This Table
10 players: 6 Good, 4 Evil.
Roles in play: Merlin x1, Percival x1, Loyal Servant x4, Morgana x1, Assassin x1, Mordred x1, Oberon x1.
What each role does:
- Merlin (Good): You see every Evil player except Mordred. If the Assassin names you, Good loses everything.
- Percival (Good): You see Merlin and Morgana, but cannot tell which is which.
- Loyal Servant (Good): No extra information at all. You have only deduction.
- Morgana (Evil): Percival cannot tell you apart from Merlin. You know every Evil player except Oberon.
- Assassin (Evil): Once Good scores 3, you name one player as Merlin. A hit hands the game to Evil.
- Mordred (Evil): Merlin cannot see you. You know every Evil player except Oberon.
- Oberon (Evil): You know no allies and they do not know you; but Merlin can see you.
Mission sizes: Mission 1: 3 players; Mission 2: 4 players; Mission 3: 4 players; Mission 4: 5 players (needs 2 fails to fail); Mission 5: 5 players.
A round can be rejected at most 5 times; hitting that limit hands the game to Evil.

## Your Identity
You are Seat 1, "P0". Your role is Merlin, on the Good side.
Your ability: You see every Evil player except Mordred. If the Assassin names you, Good loses everything.
You know who the Evil players are, but you must never name them cleanly — the Assassin is hunting you the whole game, and the more precise you are, the faster you die. Steer with hints and questions so the Good players reach the conclusion themselves, and leave some of it deliberately vague.
Only you can see the lines above. Nobody else can, and you must not repeat them in anything you say out loud.
You are Good: if you go on a mission, your card can only be success. Good players cannot produce a fail card.

## What You Know
- Seat 2 is Evil.
- Seat 7 is Evil.
- Seat 8 is Evil.

## Your Character
Name: P0
Temperament: cautious, quiet
How you talk: short sentences; facts first, verdict second
Stay in this character the whole time. Never step outside it to explain who you are playing.

## Current Situation
Phase: team building, Mission 2 of 5.
Score: Good 0 - Evil 1 (first to 3).
Leader: Seat 1. This round has been rejected once (limit 5).
This mission takes 4 players, and 1 fail card makes it fail.

## History
Mission results:
- Mission 1: Seat 1 led, team Seats 1, 2, 3, 1 fail card -> failed
Proposals and votes:
- Mission 1, proposal 1: Seat 1 nominated Seats 1, 2, 3 -> approved (for: Seats 1, 2, 3, 4, 5, 6; against: Seats 7, 8, 9, 10)

## Everything Said So Far
- Mission 1, proposal 1, proposal discussion — Seat 4: Seat 2's vote is hard to explain

## Your Angle
These all happened to you. Nobody else is obliged to bring them up:
- On the last team vote, Seats 7, 8, 9, 10 voted opposite to you.
- You were on Mission 1, which came back with 1 fail card — expect to be asked about it.

## Your Decision
You are Leader. Pick **exactly 4 players** for Mission 2.
Available: Seats 1, 2, 3, 4, 5, 6, 7, 8, 9, 10. You may put yourself on the team, or not.
The same seat cannot appear twice.
Before you pick, go back through the "History" section: what each mission returned, and who was on each team. Who has ridden together on a team that produced fails is the only hard evidence you have.
Also give a public statement explaining the pick. Usually 2-5 sentences; one sentence is fine if you are only registering a position or answering a direct question. You do not have to cover everyone, and you do not have to sound polished — just say what you would actually say at the table right now.
**That statement is your speech for this proposal discussion**, and it goes public immediately. The discussion will not come back to you, so say everything you want to say now.
**Everyone can see this**, including the players on the other side.
Do not state your real role, and do not explain how you came by what you know — say either and the game is over.
**Never open with a self-label like "As Merlin, I ..." or "Speaking as the Assassin, ..."**; talking about *other* people's roles is completely fine.
Hinting, probing, staying vague, even claiming to be someone you are not — all fair play. Confirming your own real role is not.
Write only your own turn of speech: do not restate the rules, and do not put words in other seats' mouths.
**No boardroom talk.** No professional analogies, no industry jargon, no project-management vocabulary. Never write "action item", "stakeholder", "alignment", "circle back", "verifiable progress" — this is a card table, not a status meeting.
**Invent nothing.** You may only cite speeches, votes and mission results that actually happened this game. Not one word about things that did not.
**Stay consistent.** What you say has to line up with your own earlier speeches and votes. Changing your mind is fine, but only because new information appeared, and you must say which piece.

## Output Format
Output a single JSON object. No explanation, no markdown code fence. Shape:
{"reasoning":"private analysis, nobody else sees this","team":[1,3,4],"statement":"your public explanation of the pick"}
One sentence of reasoning is enough — it only goes into the post-game review panel and is never shown to anyone."
`;
